force-app/main/default/objects/Fleet_Drift_Detector__mdt/Fleet_Drift_Detector__mdt.object-meta.xml
<CustomObject>
    <label>Fleet Drift Detector</label>
    <pluralLabel>Fleet Drift Detectors</pluralLabel>
</CustomObject>