force-app/main/default/objects/Fleet_Drift_Detector__mdt/fields/Detector_Key__c.field-meta.xml
<CustomField>
    <fullName>Detector_Key__c</fullName>
    <label>Detector Key</label>
    <type>Text</type>
    <length>80</length>
</CustomField>