force-app/main/default/objects/Fleet_Drift_Detector__mdt/fields/Minimum_Sample__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Sample__c</fullName>
    <label>Minimum Sample</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>