force-app/main/default/objects/Fleet_Drift_Detector__mdt/fields/Strategy__c.field-meta.xml
<CustomField>
    <fullName>Strategy__c</fullName>
    <label>Strategy</label>
    <type>Text</type>
    <length>80</length>
</CustomField>