force-app/main/default/objects/Fleet_Drift_Detector__mdt/fields/Threshold__c.field-meta.xml
<CustomField>
    <fullName>Threshold__c</fullName>
    <label>Threshold</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>4</scale>
</CustomField>