force-app/main/default/objects/Fleet_Drift_Detector__mdt/fields/Window_Hours__c.field-meta.xml
<CustomField>
    <fullName>Window_Hours__c</fullName>
    <label>Window Hours</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>